distro: inherit uninative

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -49,6 +49,9 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC}"
 IMAGE_FEATURES ?= ""
 EXTRA_IMAGE_FEATURES = "debug-tweaks package-management"
 
+require conf/distro/include/yocto-uninative.inc
+INHERIT += "uninative"
+
 WHITELIST_GPL-3.0 ?= ""
 LGPLv2_WHITELIST_GPL-3.0 ?= ""
 
