samba: share /tmp

--- a/recipes-custom/samba/files/smb.conf
+++ b/recipes-custom/samba/files/smb.conf
@@ -23,3 +23,12 @@ guest ok = yes
 writeable = yes
 available = yes
 unix extensions = yes
+
+[COOLSTREAM - tmp]
+path = /tmp
+read only = No
+force user = root
+guest ok = yes
+writeable = yes
+available = yes
+unix extensions = yes
