--- a/recipes-images/base-files/base-files/oscam.service
+++ b/recipes-images/base-files/base-files/oscam.service
@@ -7,6 +7,7 @@ Requires=network.target
 Type=forking
 PIDFile=/var/run/oscam.pid
 ExecStart=/usr/bin/oscam -b -B /var/run/oscam.pid
+ExecStartPost=/usr/bin/pzapit -rz
 ExecStop=/usr/bin/rm /var/run/oscam.pid
 TimeoutStopSec=1
 Restart=always
