neutrino: use exit codes

--- a/recipes-neutrino/neutrino/files/neutrino.service
+++ b/recipes-neutrino/neutrino/files/neutrino.service
@@ -5,7 +5,7 @@ Requires=networking.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/neutrino
+ExecStart=/usr/bin/neutrino.sh
 
 [Install]
 WantedBy=multi-user.target
