update-etc.service needs to wait for firstboot.service to be finished

--- a/recipes-images/base-files/base-files/firstboot.service
+++ b/recipes-images/base-files/base-files/firstboot.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=start initscript upon first boot
 Requires=local-fs.target
+Before=update-etc.service
 
 [Service]
 Type=oneshot
