--- a/recipes-neutrino/neutrino/files/tobackup.conf
+++ b/recipes-neutrino/neutrino/files/tobackup.conf
@@ -1,26 +1,17 @@
-#!/bin/sh
-
-DATE=$(date +%Y-%m-%d_%H-%M-%S)
-USRF="/etc/neutrino/config/tobackup.conf"
-
-if [ -e "${USRF}" ]; then
-# read user-files from $USRF 
-TOBACKUP="${USRF}"
-
-while read i  
-do [ "${i:0:1}" = "#" ] || TOBACKUP="$TOBACKUP ${i%%#*}"  
-done < $USRF
-
-else 
-TOBACKUP="/etc/neutrino/config/"
-fi
-
-# check existence
-RES=""
-for i in $TOBACKUP 
-do [ -e "$i" ] && RES="$RES $i" 
-done
-
-TOBACKUP=$(echo $RES)echo Backup to $1/settings_$DATE.tar
-
-tar -cf $1/settings_$DATE.tar $TOBACKUP 2>&1 >/dev/null
+/etc/auto.* \
+/etc/exports \
+/etc/hostname \
+/etc/network/interfaces \
+/etc/passwd \
+/etc/resolv.conf \
+/etc/samba/smb.conf \
+/etc/wpa_supplicant.conf \
+/etc/minidlna.conf \
+/share/tuxbox/neutrino/flex/flex_user.conf \
+/home/root/ \
+/etc/neutrino/ \
+/var/tuxbox/fonts/ \
+/var/tuxbox/icons/ \
+/var/tuxbox/locale/ \
+/var/tuxbox/themes/ \
+/var/tuxbox/webtv/ \
