--- a/recipes-neutrino/neutrino/files/tobackup.conf
+++ b/recipes-neutrino/neutrino/files/tobackup.conf
@@ -1,17 +1,17 @@
-/etc/auto.* \
-/etc/exports \
-/etc/hostname \
-/etc/network/interfaces \
-/etc/passwd \
-/etc/resolv.conf \
-/etc/samba/smb.conf \
-/etc/wpa_supplicant.conf \
-/etc/minidlna.conf \
-/share/tuxbox/neutrino/flex/flex_user.conf \
-/home/root/ \
-/etc/neutrino/ \
-/var/tuxbox/fonts/ \
-/var/tuxbox/icons/ \
-/var/tuxbox/locale/ \
-/var/tuxbox/themes/ \
-/var/tuxbox/webtv/ \
+/etc/auto.*
+/etc/exports
+/etc/hostname
+/etc/network/interfaces
+/etc/passwd
+/etc/resolv.conf
+/etc/samba/smb.conf
+/etc/wpa_supplicant.conf
+/etc/minidlna.conf
+/share/tuxbox/neutrino/flex/flex_user.conf
+/home/root/
+/etc/neutrino/
+/var/tuxbox/fonts/
+/var/tuxbox/icons/
+/var/tuxbox/locale/
+/var/tuxbox/themes/
+/var/tuxbox/webtv/
