udevadm: trigger devices while booting; use nl80211 for wlan

--- a/recipes-custom/ifupdown/files/networking.service
+++ b/recipes-custom/ifupdown/files/networking.service
@@ -3,7 +3,11 @@ Description=ifup network start
 
 [Service]
 Type=oneshot
-ExecStart=/sbin/ifup -a
+ExecStartPre=/bin/udevadm trigger --type=devices
+ExecStart=-/etc/network/pre-wlan0.sh
+ExecStartPost=/sbin/ifup -a
 
 [Install]
 WantedBy=multi-user.target
+
+
