update to current yocto master

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,10 +1,11 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
-DISTRO_VERSION = "rocko"
-DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}"
+DISTRO_VERSION = "sumo"
+DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_VERSION_NUMBER_MAJOR = "2"
-DISTRO_VERSION_NUMBER_MINOR = "4"
-SDK_VERSION ??= "rocko"
+DISTRO_VERSION_NUMBER_MINOR = "5"
+DISTRO_VERSION_NUMBER_MICRO = "0"
+SDK_VERSION ??= "sumo"
 
 TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
@@ -73,6 +74,7 @@ MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
 
 PREFERRED_VERSION_linux-libc-headers = "4.10"
+PREFERRED_VERSION_ffmpeg = "3.4.1"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-gfutures"
 PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp-ax51"
