distro: require ${MACHINE}.inc; use 4.10 libc-headers for nativesdk also

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,5 +1,7 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
+require ${MACHINE}.inc
+
 DISTRO_VERSION = "sumo"
 DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_VERSION_NUMBER_MAJOR = "2"
@@ -72,14 +74,4 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
-
-PREFERRED_VERSION_linux-libc-headers = "4.10"
-PREFERRED_VERSION_ffmpeg = "3.4.1"
-
-PREFERRED_PROVIDER_virtual/kernel = "linux-gfutures"
-PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp-ax51"
-PREFFERED_PROVIDER_virtual/libstb-hal = "libstb-hal"
-PREFFERED_PROVIDER_virtual/dvb-driver = "gfutures-dvb-modules-hd51"
-PREFFERED_PROVIDER_virtual/screengrabber = "grab"
-PREFERRED_PROVIDER_virtual/libgles2 = "hd-v3ddriver-hd51"
-PREFERRED_PROVIDER_virtual/egl = "hd-v3ddriver-hd51"
+LICENSE_FLAGS_WHITELIST="commercial"
