--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -29,6 +29,8 @@ IMAGE_LINGUAS ?= "en-us de-de fr-fr"
 ENABLE_BINARY_LOCALE_GENERATION ?= "1"
 LOCALE_UTF8_IS_DEFAULT ?= "1"
 LOCALE_UTF8_ONLY ?= "0"
+LOCALE_UTF8_IS_DEFAULT ?= "1"
+LOCALE_UTF8_IS_DEFAULT_class-nativesdk = "0"
 
 SSTATE_DIR = "${TOPDIR}/sstate-cache"
 BB_GENERATE_MIRROR_TARBALLS ??= "0"
