--- a/recipes-custom/samba/files/smb.conf
+++ b/recipes-custom/samba/files/smb.conf
@@ -1,6 +1,6 @@
 [global]
 workgroup = WORKGROUP
-security = user
+security = share
 map to guest = bad user
 printcap name = /dev/null
 guest account = nobody
