switch from vsftpd to proftpd

--- a/recipes-local/proftpd/files/proftpd.service
+++ b/recipes-local/proftpd/files/proftpd.service
@@ -3,5 +3,9 @@ Description=proftpd Daemon
 
 [Service]
 Type=forking
-ExecStart=-@SBINDIR@/proftpd -c @SYSCONFDIR@/proftpd.conf
+ExecStart=-/usr/sbin/proftpd -c /etc/proftpd.conf
 StandardError=syslog
+
+[Install]
+WantedBy=multi-user.target
+
