samba: edit smb.conf

--- a/recipes-custom/samba/files/smb.conf
+++ b/recipes-custom/samba/files/smb.conf
@@ -6,8 +6,8 @@ printcap name = /dev/null
 guest account = nobody
 smb ports = 139 445
 
-[COOLSTREAM - media]
-path = /media
+[COOLSTREAM - HDD]
+path = /media/HDD
 read only = No
 force user = root
 guest ok = yes
