proftpd: use utf8 locale; cleanup

--- a/recipes-local/proftpd/files/proftpd.conf
+++ b/recipes-local/proftpd/files/proftpd.conf
@@ -51,3 +51,11 @@ DisplayLogin              /etc/welcome.msg
 # Show hidden files
 ListOptions -a
 
+# language settings
+<IfModule mod_lang.c>
+LangDefault en_US
+LangEngine on
+UseEncoding utf-8 utf-8
+LangPath /usr/share/locale
+</IfModule>
+
