proftpd.conf: make up- and downloads resumable

--- a/recipes-local/proftpd/files/proftpd.conf
+++ b/recipes-local/proftpd/files/proftpd.conf
@@ -41,6 +41,12 @@ DefaultRoot /
 # Normally, we want files to be overwriteable.
 AllowOverwrite		on
 
+#  We want uploads to be resumable
+AllowStoreRestart on
+
+# Do the same for downloads
+AllowRetrieveRestart on
+
 DisplayLogin              /etc/welcome.msg
 
 # Bar use of SITE CHMOD by default
