proftpd: add option switch for sendfile

--- a/recipes-local/proftpd/files/proftpd.conf
+++ b/recipes-local/proftpd/files/proftpd.conf
@@ -47,6 +47,10 @@ AllowStoreRestart on
 # Do the same for downloads
 AllowRetrieveRestart on
 
+# Enable sendfile support. If you encounter issues, please have a lokk at
+# http://www.proftpd.org/docs/howto/Sendfile.html
+UseSendfile on
+
 DisplayLogin              /etc/welcome.msg
 
 # Bar use of SITE CHMOD by default
