--- a/recipes-images/base-files/base-files/firstboot.service
+++ b/recipes-images/base-files/base-files/firstboot.service
@@ -1,11 +1,10 @@
 [Unit]
 Description=start initscript upon first boot
 Requires=local-fs.target
-Before=update-etc.service
 
 [Service]
 Type=oneshot
 ExecStart=/usr/sbin/firstboot.sh
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=basic.target
