neutrino.service: dont depend on removed update-etc.service

--- a/recipes-neutrino/neutrino/files/neutrino.service
+++ b/recipes-neutrino/neutrino/files/neutrino.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Neutrino HD
-Requires=networking.service update-etc.service
+Requires=networking.service
 After=firstboot.service
 
 [Service]
