use fbset to configure the framebuffer

--- a/recipes-neutrino/neutrino/files/neutrino.service
+++ b/recipes-neutrino/neutrino/files/neutrino.service
@@ -5,6 +5,7 @@ After=firstboot.service
 
 [Service]
 Type=simple
+ExecStartPre=/bin/sh -c '/usr/sbin/fbset 1920x1080-60'
 ExecStart=/usr/bin/neutrino.sh
 
 [Install]
