--- a/recipes-local/gpm/gpm/gpm.service.in
+++ b/recipes-local/gpm/gpm/gpm.service.in
@@ -3,7 +3,7 @@ Description=Virtual console mouse server
 
 [Service]
 Type=forking
-ExecStart=@bindir@/gpm -m /dev/input/mice -t imps2
+ExecStart=@sbindir@/gpm -m /dev/input/mice -t imps2
 
 [Install]
 WantedBy=multi-user.target
