udpxy: update service file

--- a/recipes-local/udpxy/files/udpxy.service
+++ b/recipes-local/udpxy/files/udpxy.service
@@ -3,9 +3,8 @@ Description=UDP multicast to TCP (HTTP) relay proxy
 After=network.target
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/usr/bin/udpxy -T -S -p 4022 -B 256kb
-RemainAfterExit=true
 
 [Install]
 WantedBy=multi-user.target
