--- a/recipes-images/base-files/base-files/flash@.service
+++ b/recipes-images/base-files/base-files/flash@.service
@@ -2,6 +2,7 @@
 Description=flash on partition %I
 
 [Service]
+ExecStartPre=-/bin/sh -c '/usr/bin/mount.sh add sda1 >> /dev/null'
 ExecStart=/usr/bin/flash %I
 ExecStartPost=/bin/echo -e '\033[?17;0;0c'
 Type=oneshot
