--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -2,12 +2,12 @@
 
 require ${MACHINE}.inc
 
-DISTRO_VERSION = "sumo"
+DISTRO_VERSION = "thud"
 DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_VERSION_NUMBER_MAJOR = "2"
-DISTRO_VERSION_NUMBER_MINOR = "5"
-DISTRO_VERSION_NUMBER_MICRO = "1"
-SDK_VERSION ??= "sumo"
+DISTRO_VERSION_NUMBER_MINOR = "6"
+DISTRO_VERSION_NUMBER_MICRO = "0"
+SDK_VERSION ??= "thud"
 
 TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
