use lowercase letters for mountpoints

--- a/recipes-custom/samba/files/smb.conf
+++ b/recipes-custom/samba/files/smb.conf
@@ -7,7 +7,7 @@ guest account = nobody
 smb ports = 139 445
 
 [COOLSTREAM - HDD]
-path = /media/HDD
+path = /media/hdd
 read only = No
 force user = root
 guest ok = yes
