--- a/recipes-local/minidlna/minidlna/minidlna.conf
+++ b/recipes-local/minidlna/minidlna/minidlna.conf
@@ -15,9 +15,9 @@ user=root
 #   + "V" for video  (eg. media_dir=V,/home/jmaggard/Videos)
 #   + "P" for images (eg. media_dir=P,/home/jmaggard/Pictures)
 #   + "PV" for pictures and video (eg. media_dir=PV,/home/jmaggard/digital_camera)
-media_dir=V,/media/HDD/movies
-media_dir=A,/media/HDD/music
-media_dir=P,/media/HDD/pictures
+media_dir=V,/media/hdd/movies
+media_dir=A,/media/hdd/music
+media_dir=P,/media/hdd/pictures
 
 # set this to merge all media_dir base contents into the root container
 # note: the default is no
