samba: use pam auth; add CP850 codepage to RDEPENDS; edit cfg

--- a/recipes-custom/samba/files/smb.conf
+++ b/recipes-custom/samba/files/smb.conf
@@ -3,8 +3,16 @@ workgroup = WORKGROUP
 security = user
 map to guest = bad user
 printcap name = /dev/null
-guest account = nobody
+guest account = root
 smb ports = 139 445
+allow insecure wide links = yes
+map to guest = Bad Password
+enable privileges = yes
+obey pam restrictions = yes
+unix password sync = yes
+pam password change = yes
+server multi channel support = yes
+unix extensions = yes
 
 [COOLSTREAM - HDD]
 path = /media/hdd
@@ -13,7 +21,6 @@ force user = root
 guest ok = yes
 writeable = yes
 available = yes
-unix extensions = yes
 
 [COOLSTREAM - config]
 path = /etc/neutrino
@@ -22,7 +29,6 @@ force user = root
 guest ok = yes
 writeable = yes
 available = yes
-unix extensions = yes
 
 [COOLSTREAM - tmp]
 path = /tmp
@@ -31,4 +37,3 @@ force user = root
 guest ok = yes
 writeable = yes
 available = yes
-unix extensions = yes
