--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -74,3 +74,6 @@ VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
 LICENSE_FLAGS_WHITELIST="commercial"
+
+PREFERRED_VERSION_webmin = "1.900"
+PREFERRED_VERSION_webmin-theme-authentic-theme = "19.19"
