--- a/recipes-local/oscam/files/oscam.conf
+++ b/recipes-local/oscam/files/oscam.conf
@@ -6,3 +6,6 @@ httphelplang = de
 httprefresh = 5
 httpallowed = 127.0.0.1,192.168.0.0-192.168.255.255
 
+[lcd]
+enablelcd                     = 1
+lcd_outputpath                = /tmp/.oscam
