proftpd: use binary mode for file transfer by default

--- a/recipes-local/proftpd/files/proftpd.conf
+++ b/recipes-local/proftpd/files/proftpd.conf
@@ -18,6 +18,9 @@ Port				21
 # Don't use IPv6 support by default.
 UseIPv6				off
 
+# By default binary transfer mode is used.
+DefaultTransferMode binary
+
 # Umask 022 is a good standard umask to prevent new dirs and files
 # from being group and world writable.
 # Umask				022
