tuxbox.conf: set to upcoming yocto release

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,10 +1,10 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
-DISTRO_VERSION = "thud"
+DISTRO_VERSION = "warrior"
 DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_VERSION_NUMBER_MAJOR = "2"
-DISTRO_VERSION_NUMBER_MINOR = "6"
-DISTRO_VERSION_NUMBER_MICRO = "1"
+DISTRO_VERSION_NUMBER_MINOR = "7"
+DISTRO_VERSION_NUMBER_MICRO = "0"
 SDK_VERSION ??= "thud"
 
 TCLIBC ?= "glibc"
