--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_neutrino-hd = "thud"
+LAYERSERIES_COMPAT_neutrino-hd = "warrior"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
