firstboot.service: avoid starting problems

--- a/recipes-images/base-files/base-files/firstboot.service
+++ b/recipes-images/base-files/base-files/firstboot.service
@@ -4,7 +4,7 @@ Requires=local-fs.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/sbin/firstboot.sh
+ExecStart=/bin/sh -c "/usr/sbin/firstboot.sh"
 
 [Install]
 WantedBy=basic.target
