--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,9 +1,9 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
-DISTRO_VERSION = "warrior"
+DISTRO_VERSION = "zeus"
 DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
-DISTRO_VERSION_NUMBER_MAJOR = "2"
-DISTRO_VERSION_NUMBER_MINOR = "7"
+DISTRO_VERSION_NUMBER_MAJOR = "3"
+DISTRO_VERSION_NUMBER_MINOR = "0"
 DISTRO_VERSION_NUMBER_MICRO = "0"
 SDK_VERSION ??= "thud"
 
@@ -75,5 +75,6 @@ MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
 LICENSE_FLAGS_WHITELIST="commercial"
 
-PREFERRED_VERSION_webmin = "1.910"
-PREFERRED_VERSION_webmin-theme-authentic-theme = "19.33"
+PREFERRED_VERSION_ffmpeg = "4.2"
+PREFERRED_VERSION_webmin = "1.930"
+PREFERRED_VERSION_webmin-theme-authentic-theme = "19.39"
