add sanity tested distros

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -78,3 +78,19 @@ LICENSE_FLAGS_WHITELIST="commercial"
 PREFERRED_VERSION_ffmpeg = "4.2"
 PREFERRED_VERSION_webmin = "1.930"
 PREFERRED_VERSION_webmin-theme-authentic-theme = "19.39"
+
+SANITY_TESTED_DISTROS ?= " \
+	poky-2.3-snapshot-20170912 \n \
+	poky-2.6 \n \
+	poky-2.7 \n \
+	ubuntu-16.04 \n \
+	ubuntu-18.04 \n \
+	fedora-28 \n \
+	fedora-29 \n \
+	fedora-30 \n \
+	centos-7 \n \
+	debian-8 \n \
+	debian-9 \n \
+	debian-10 \n \
+	opensuseleap-15.1 \n \
+"
