tuxbox.conf: add VIRTUAL_RUNTIME_login_manager

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -71,6 +71,7 @@ DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit pulseaudio"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+VIRTUAL-RUNTIME_login_manager = "shadow-base"
 MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
 LICENSE_FLAGS_WHITELIST="commercial"
