next try to fix sdk installation

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -65,7 +65,7 @@ COMMERCIAL_VIDEO_PLUGINS ?= ""
 COMMON_LICENSE_DIR ??= "${COREBASE}/meta/files/common-licenses"
 
 # Allow java, svn and unzip executed on host
-HOSTTOOLS += "java svn unzip"
+HOSTTOOLS += "java svn unzip xmlcatalog"
 
 DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit pulseaudio"
