--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -5,7 +5,8 @@ DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_
 DISTRO_VERSION_NUMBER_MAJOR = "3"
 DISTRO_VERSION_NUMBER_MINOR = "0"
 DISTRO_VERSION_NUMBER_MICRO = "0"
-SDK_VERSION ??= "thud"
+SDK_NAME = "tuxbox"
+SDK_VERSION = "${DISTRO_VERSION}"
 
 TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
