--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -66,7 +66,7 @@ COMMERCIAL_VIDEO_PLUGINS ?= ""
 COMMON_LICENSE_DIR ??= "${COREBASE}/meta/files/common-licenses"
 
 # Allow java, svn and unzip executed on host
-HOSTTOOLS += "java svn unzip xmlcatalog"
+HOSTTOOLS += "svn unzip xmlcatalog"
 
 DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit pulseaudio"
