--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_neutrino-hd = "warrior"
+LAYERSERIES_COMPAT_neutrino-mp = "zeus"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
@@ -7,9 +7,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES := "${BBFILES} ${LAYERDIR}/recipes*/*/*.bb \ 
             ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "neutrino-hd"
-BBFILE_PATTERN_neutrino-hd := "^${LAYERDIR}/"
-BBFILE_PRIORITY_neutrino-hd = "10"
+BBFILE_COLLECTIONS += "neutrino-mp"
+BBFILE_PATTERN_neutrino-mp := "^${LAYERDIR}/"
+BBFILE_PRIORITY_neutrino-mp = "10"
 
 # Additional license directories.
 LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
