--- a/recipes-qt/qt5/qtwebflix/qtwebflix.service
+++ b/recipes-qt/qt5/qtwebflix/qtwebflix.service
@@ -2,11 +2,14 @@
 Description=QtWebflix
 Requires=networking.service
 
+
 [Service]
 Type=simple
-ExecStart=/bin/sh -c "/usr/bin/qtwebflix -platform eglfs"
+Environment=QTWEBENGINE_DISABLE_SANDBOX=1
+Environment=QT_QPA_PLATFORM=eglfs
+ExecStartPre=/bin/sh -c "echo encoder > /proc/stb/avs/0/input"
+ExecStart=/bin/sh -c "/usr/bin/qtwebflix"
 Restart=always
-User=netflix
 
 [Install]
 WantedBy=multi-user.target
