--- a/recipes-qt/qt5/qtwebflix/artemediathek.service
+++ b/recipes-qt/qt5/qtwebflix/artemediathek.service
@@ -9,7 +9,7 @@ Environment=QTWEBENGINE_DISABLE_SANDBOX=1
 Environment=QT_QPA_PLATFORM=eglfs
 ExecStartPre=/bin/sh -c "/bin/systemctl stop neutrino"
 ExecStartPre=/bin/sh -c "echo encoder > /proc/stb/avs/0/input"
-ExecStart=/bin/sh -c "/usr/bin/qtwebflix -p https://netflix.com"
+ExecStart=/bin/sh -c "/usr/bin/qtwebflix -p https://www.arte.tv/de/"
 ExecStop=/bin/sh -c "/bin/systemctl start neutrino"
 Restart=on-abort
 
