--- a/recipes-qt/qt5/qtwebflix/qtwebflix.service
+++ b/recipes-qt/qt5/qtwebflix/qtwebflix.service
@@ -11,7 +11,7 @@ ExecStartPre=/bin/sh -c "/bin/systemctl stop neutrino"
 ExecStartPre=/bin/sh -c "echo encoder > /proc/stb/avs/0/input"
 ExecStart=/bin/sh -c "/usr/bin/qtwebflix -p https://netflix.com"
 ExecStop=/bin/sh -c "/bin/systemctl start neutrino"
-Restart=on-abort
+RemainAfterExit=no
 
 [Install]
 WantedBy=multi-user.target
