--- a/recipes-qt/qt5/qtwebflix/browser.service
+++ b/recipes-qt/qt5/qtwebflix/browser.service
@@ -11,6 +11,7 @@ ExecStartPre=/bin/sh -c "/bin/systemctl stop neutrino"
 ExecStartPre=/bin/sh -c "echo encoder > /proc/stb/avs/0/input"
 ExecStart=/bin/sh -c "/usr/bin/qtwebflix -p https://www.google.de"
 ExecStop=/bin/sh -c "/bin/systemctl start neutrino"
+Restart=on-abort
 RemainAfterExit=no
 
 [Install]
