--- a/recipes-qt/qt5/qtwebflix/artemediathek.service
+++ b/recipes-qt/qt5/qtwebflix/artemediathek.service
@@ -7,6 +7,9 @@ Requires=networking.service
 Type=simple
 Environment=QTWEBENGINE_DISABLE_SANDBOX=1
 Environment=QT_QPA_PLATFORM=eglfs
+Environment=QTWEBENGINE_CHROMIUM_FLAGS=--lang=de-DE
+Environment=QT_QPA_EGLFS_WIDTH=1920
+Environment=QT_QPA_EGLFS_HEIGHT=1080
 ExecStartPre=/bin/sh -c "/bin/systemctl stop neutrino"
 ExecStartPre=/bin/sh -c "echo encoder > /proc/stb/avs/0/input"
 ExecStart=/bin/sh -c "/usr/bin/qtwebflix -p https://www.arte.tv/de/"
