--- a/recipes-custom/busybox/files/ash.cfg
+++ b/recipes-custom/busybox/files/ash.cfg
@@ -6,7 +6,7 @@ CONFIG_BASH_IS_ASH=y
 # CONFIG_BASH_IS_NONE is not set
 CONFIG_ASH=y
 CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
-# CONFIG_ASH_INTERNAL_GLOB is not set
+CONFIG_ASH_INTERNAL_GLOB=y
 CONFIG_ASH_BASH_COMPAT=y
 # CONFIG_ASH_BASH_SOURCE_CURDIR is not set
 CONFIG_ASH_BASH_NOT_FOUND_HOOK=y
