add ubuntu 20.04 to tested Distros

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -88,6 +88,7 @@ SANITY_TESTED_DISTROS ?= " \
 	ubuntu-18.04 \n \
 	ubuntu-19.04 \n \
 	ubuntu-19.10 \n \
+	ubuntu-20.04 \n \
 	fedora-28 \n \
 	fedora-29 \n \
 	fedora-30 \n \
