change to pmt_mode = 4

--- a/recipes-local/oscam/files/oscam.conf
+++ b/recipes-local/oscam/files/oscam.conf
@@ -6,6 +6,13 @@ httphelplang = de
 httprefresh = 5
 httpallowed = 127.0.0.1,192.168.0.0-192.168.255.255
 
+[dvbapi]
+enabled                       = 1
+au                            = 1
+pmt_mode                      = 4
+delayer                       = 60
+user                          = DVBApi
+
 [lcd]
 enablelcd                     = 1
 lcd_outputpath                = /tmp/.oscam
