tuxbox.conf: use 0 for variable RELEASE_TYPE as default value
changeable with local.conf

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -19,7 +19,7 @@ OEINCLUDELOGS ?= "yes"
 PATCHRESOLVE = "noop"
 
 PRSERV_HOST = "localhost:0"
-RELEASE_STATE = "0"
+RELEASE_STATE ?= "0"
 
 KERNEL_CONSOLE ?= "ttyS0"
 KEEPUIMAGE ??= "yes"
