distro/tuxbox.conf: add defaults for UPDATE_SERVER_URL, IMAGE_LOCATION

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -21,6 +21,9 @@ PATCHRESOLVE = "noop"
 
 PRSERV_HOST = "localhost:0"
 RELEASE_STATE ?= "0"
+UPDATE_SERVER_URL ?= ""
+IMAGE_LOCATION ?= "file:////media/sda1/service/images"
+
 
 KERNEL_CONSOLE ?= "ttyS0"
 KEEPUIMAGE ??= "yes"
