tuxbox.conf: adjust to latest dunfell release

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,10 +1,10 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
-DISTRO_VERSION = "gatesgarth"
+DISTRO_VERSION = "dunfell"
 DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_VERSION_NUMBER_MAJOR = "3"
-DISTRO_VERSION_NUMBER_MINOR = "2"
-DISTRO_VERSION_NUMBER_MICRO = "0"
+DISTRO_VERSION_NUMBER_MINOR = "1"
+DISTRO_VERSION_NUMBER_MICRO = "1"
 SDK_NAME = "tuxbox"
 SDK_VERSION = "${DISTRO_VERSION}"
 
