--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -92,6 +92,8 @@ SANITY_TESTED_DISTROS ?= " \
 	fedora-28 \n \
 	fedora-29 \n \
 	fedora-30 \n \
+        fedora-31 \n \
+        fedora-32 \n \
 	centos-7 \n \
 	debian-8 \n \
 	debian-9 \n \
