More fine tuning for version files

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -5,7 +5,10 @@ DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_
 DISTRO_VERSION_NUMBER_MAJOR = "3"
 DISTRO_VERSION_NUMBER_MINOR = "2"
 DISTRO_VERSION_NUMBER_MICRO = "0"
+DISTRO_VERSION_NUMBER_CYCLE = "${DISTRO_VERSION_NUMBER_MAJOR}${DISTRO_VERSION_NUMBER_MINOR}0"
+DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_CUSTOM_VERSION ?= ""
+
 SDK_NAME = "tuxbox"
 SDK_VERSION = "${DISTRO_VERSION}"
 
@@ -13,6 +16,8 @@ TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
 TMPDIR .= "${TCLIBCAPPEND}"
 TMPDIR = "${TOPDIR}/tmp"
+
+RELEASE_TEXT_FILE_NAME ?= "beta.txt"
 
 QA_LOGFILE = "${TMPDIR}/qa.log"
 
