cleanup and configuration for lua update

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -4,8 +4,11 @@ LAYERSERIES_COMPAT_neutrino-mp = "zeus dunfell gatesgarth"
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory containing .bb and .bbappend files, add to BBFILES
-BBFILES := "${BBFILES} ${LAYERDIR}/recipes*/*/*.bb \ 
-            ${LAYERDIR}/recipes*/*/*.bbappend"
+BBFILES := "${BBFILES} ${LAYERDIR}/recipes*/*/*.bb \
+            ${BBFILES} ${LAYERDIR}/recipes*/*/*/*.bb \
+            ${LAYERDIR}/recipes*/*/*.bbappend \
+            ${LAYERDIR}/recipes*/*/*/*.bbappend \
+"
 
 BBFILE_COLLECTIONS += "neutrino-mp"
 BBFILE_PATTERN_neutrino-mp := "^${LAYERDIR}/"
