--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -77,11 +77,11 @@ MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
 LICENSE_FLAGS_WHITELIST="commercial"
 
-PREFERRED_PROVIDER_virtual/lua = "lua"
+PREFERRED_PROVIDER_virtual/lua = "luajit"
 
 PREFERRED_VERSION_ffmpeg = "4.3.1"
 PREFERRED_VERSION_webmin = "1.954"
-PREFERRED_VERSION_virtual/lua = "5.3.5"
+PREFERRED_VERSION_virtual/lua = "2.1"
 
 SANITY_TESTED_DISTROS ?= " \
 	poky-2.3-snapshot-20170912 \n \
