workaround build with sdl

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -75,6 +75,9 @@ VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 VIRTUAL-RUNTIME_login_manager = "shadow-base"
 MACHINE_FEATURES_BACKFILL_CONSIDERED = "rtc"
 
+# workaround: cant build sdl against glx
+ASSUME_PROVIDED += "libsdl2-native nativesdk-libsdl2"
+
 LICENSE_FLAGS_WHITELIST="commercial"
 
 PREFERRED_PROVIDER_virtual/lua = "luajit"
