tuxbox.conf: add variable DISTRO_CUSTOM_VERSION

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -5,6 +5,7 @@ DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_
 DISTRO_VERSION_NUMBER_MAJOR = "3"
 DISTRO_VERSION_NUMBER_MINOR = "2"
 DISTRO_VERSION_NUMBER_MICRO = "0"
+DISTRO_CUSTOM_VERSION ?= ""
 SDK_NAME = "tuxbox"
 SDK_VERSION = "${DISTRO_VERSION}"
 
