classes: add class image_version.bbclass
Moves some functions from meta-<machine>/classes/ to
global class for easier maintenance.

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -12,6 +12,8 @@ DISTRO_CUSTOM_VERSION ?= ""
 SDK_NAME = "tuxbox"
 SDK_VERSION = "${DISTRO_VERSION}"
 
+INHIBIT_EXTENDED_IMAGE_VERSION ?= "1"
+
 TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
 TMPDIR .= "${TCLIBCAPPEND}"
