set layer compatibility to gatesgarth; set distro to gatesgarth release

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_neutrino-mp = "zeus dunfell gatesgarth"
+LAYERSERIES_COMPAT_neutrino-mp = "gatesgarth"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
