--- a/recipes-neutrino/neutrino/files/neutrino.service
+++ b/recipes-neutrino/neutrino/files/neutrino.service
@@ -2,6 +2,7 @@
 Description=Neutrino HD
 Requires=networking.service
 After=firstboot.service
+Conflicts=tvheadend.service kodi.service
 
 [Service]
 Type=simple
