--- a/recipes-multimedia/tvheadend/files/tvheadend.service
+++ b/recipes-multimedia/tvheadend/files/tvheadend.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=tvheadend
-Wants=network.target
 Conflicts=neutrino.service
+After=syslog.target network.target auditd.service
 
 [Service]
-User=root
-Type=simple
-ExecStart=/bin/sh -c "/usr/bin/tvheadend --noacl"
-RemainAfterExit=true
+Type=forking
+PIDFile=/run/tvheadend.pid
+ExecStart=/usr/bin/tvheadend -f -p /var/run/tvheadend.pid -C -u root -g root
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
