neutrino.service: add Conflicts for weston.service

--- a/recipes-neutrino/neutrino/files/neutrino.service
+++ b/recipes-neutrino/neutrino/files/neutrino.service
@@ -2,7 +2,7 @@
 Description=Neutrino HD
 Requires=networking.service
 After=firstboot.service
-Conflicts=tvheadend.service kodi.service
+Conflicts=tvheadend.service kodi.service weston.service
 
 [Service]
 Type=simple
