superseed userspace autospawn by socket activation

--- a/recipes-multimedia/pulseaudio/files/client.conf
+++ b/recipes-multimedia/pulseaudio/files/client.conf
@@ -22,8 +22,8 @@
 ; default-server =
 ; default-dbus-server =
 
-; autospawn = yes
-allow-autospawn-for-root = yes
+autospawn = no
+; allow-autospawn-for-root = yes
 ; daemon-binary = /usr/bin/pulseaudio
 ; extra-arguments = --log-target=syslog
 
