--- a/recipes-multimedia/pulseaudio/files/pulseaudio.service
+++ b/recipes-multimedia/pulseaudio/files/pulseaudio.service
@@ -1,9 +1,12 @@
 [Unit]
 Description=PulseAudio system server
+Requires=pulseaudio.socket
 
 [Service]
 Type=notify
-ExecStart=pulseaudio -vvvv --daemonize=no --system --realtime --log-target=journal
+ExecStart=pulseaudio --daemonize=no --system --realtime --log-target=journal
+Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target
+Also=pulseaudio.socket
+WantedBy=default.target
