--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -41,7 +41,7 @@ LOCALE_UTF8_IS_DEFAULT ?= "1"
 LOCALE_UTF8_ONLY ?= "0"
 LOCALE_UTF8_IS_DEFAULT_class-nativesdk = "0"
 
-SSTATE_DIR = "${TOPDIR}/sstate-cache"
+SSTATE_DIR ?= "${TOPDIR}/sstate-cache"
 BB_GENERATE_MIRROR_TARBALLS ??= "0"
 BBINCLUDELOGS ??= "yes"
 BB_STRICT_CHECKSUM = "1"
