neutrino-image-base.inc: geneerate package index while image build

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -117,3 +117,6 @@ SANITY_TESTED_DISTROS ?= " \
 	debian-10 \n \
 	opensuseleap-15.1 \n \
 "
+
+#INHERIT_append ?= "rm_work"
+#RM_WORK_EXCLUDE_append ?= "neutrino-image base-files"
