--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -120,3 +120,12 @@ SANITY_TESTED_DISTROS ?= " \
 	debian-10 \n \
 	opensuseleap-15.1 \n \
 "
+
+# TARGET_CFLAGS = "${TARGET_CPPFLAGS} ${SELECTED_OPTIMIZATION}"
+#
+# DEBUG_FLAGS ?= "-g -feliminate-used-debug-types ${DEBUG_PREFIX_MAP} "
+#
+# FULL_OPTIMIZATION = "-Os -pipe ${DEBUG_FLAGS}"
+# DEBUG_OPTIMIZATION = "-Og ${DEBUG_FLAGS -pipe}"
+# SELECTED_OPTIMIZATION = "${@d.getVar(oe.utils.vartrue('DEBUG_BUILD', 'DEBUG_OPTIMIZATION', 'FULL_OPTIMIZATION', d))}"
+
