--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -14,6 +14,8 @@ SDK_VERSION = "${DISTRO_VERSION}"
 
 INHIBIT_EXTENDED_IMAGE_VERSION ?= "1"
 
+RM_WORK_EXCLUDE += "neutrino-image base-files"
+
 TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
 TMPDIR .= "${TCLIBCAPPEND}"
@@ -117,6 +119,3 @@ SANITY_TESTED_DISTROS ?= " \
 	debian-10 \n \
 	opensuseleap-15.1 \n \
 "
-
-#INHERIT_append ?= "rm_work"
-#RM_WORK_EXCLUDE_append ?= "neutrino-image base-files"
