--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,25 +1,50 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
-DISTRO_VERSION = "gatesgarth"
-DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
+DISTRO_NAME ?= "${DISTRO}"
 DISTRO_VERSION_NUMBER_MAJOR = "3"
 DISTRO_VERSION_NUMBER_MINOR = "2"
 DISTRO_VERSION_NUMBER_MICRO = "4"
 DISTRO_VERSION_NUMBER_CYCLE = "${DISTRO_VERSION_NUMBER_MAJOR}${DISTRO_VERSION_NUMBER_MINOR}0"
-DISTRO_VERSION_NUMBER = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
-DISTRO_CUSTOM_VERSION ?= ""
+DISTRO_BUILD_VERSION = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
+DISTRO_VERSION ?= "${DISTRO_BUILD_VERSION}"
+DISTRO_TYPE ?= "beta"
 
-SDK_NAME = "tuxbox"
+BUILD_VERSION = "${@time.strftime('%Y%m%d%H%M%S',time.localtime())}"
+
+SDK_NAME ?= "neutrino-image"
 SDK_VERSION = "${DISTRO_VERSION}"
 
-INHIBIT_EXTENDED_IMAGE_VERSION ?= "1"
+
+IMAGE_BASENAME ?= "${DISTRO_NAME}"
+IMAGE_VERSION_SUFFIX ?= "-${DATE}"
+IMAGE_NAME ?= "${IMAGE_BASENAME}-${MACHINE}-${DISTRO_VERSION}${IMAGE_VERSION_SUFFIX}"
+
+CREATOR ?= "${USER}"
+KBUILD_BUILD_USER ?= "${CREATOR}"
+
+GIT_USER ?= "root"
+MAIL ?= "root@${MACHINE}"
+
+PACKAGE_CLASSES ?= "package_ipk"
+
+IMAGESIZE ?= "normal"
 
 RM_WORK_EXCLUDE += "neutrino-image base-files"
+
+DEFAULT_TIMEZONE ?= "Europe/Berlin"
 
 TCLIBC ?= "glibc"
 TCLIBCAPPEND ?= ""
 TMPDIR .= "${TCLIBCAPPEND}"
-TMPDIR = "${TOPDIR}/tmp"
+TMPDIR ?= "${TOPDIR}/tmp"
+
+BB_DISKMON_DIRS ?= "\
+    STOPTASKS,${TMPDIR},1G,100K \
+    STOPTASKS,${DL_DIR},1G,100K \
+    STOPTASKS,${SSTATE_DIR},500M,100K \
+    ABORT,${TMPDIR},100M,1K \
+    ABORT,${DL_DIR},100M,1K \
+    ABORT,${SSTATE_DIR},100M,1K"
 
 RELEASE_TEXT_FILE_NAME ?= "beta.txt"
 
@@ -43,7 +68,6 @@ LOCALE_UTF8_IS_DEFAULT ?= "1"
 LOCALE_UTF8_ONLY ?= "0"
 LOCALE_UTF8_IS_DEFAULT_class-nativesdk = "0"
 
-SSTATE_DIR ?= "${TOPDIR}/sstate-cache"
 BB_GENERATE_MIRROR_TARBALLS ??= "0"
 BBINCLUDELOGS ??= "yes"
 BB_STRICT_CHECKSUM = "1"
@@ -63,7 +87,7 @@ DISTRO_FEATURES_LIBC_class-nativesdk = "${DISTRO_FEATURES_LIBC_DEFAULT}"
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC}"
 USE_NONFREE ?="yes"
 IMAGE_FEATURES ?= ""
-EXTRA_IMAGE_FEATURES = "debug-tweaks package-management"
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks package-management"
 
 require conf/distro/include/yocto-uninative.inc
 INHERIT += "uninative"
@@ -121,11 +145,37 @@ SANITY_TESTED_DISTROS ?= " \
 	opensuseleap-15.1 \n \
 "
 
-# TARGET_CFLAGS = "${TARGET_CPPFLAGS} ${SELECTED_OPTIMIZATION}"
-#
-# DEBUG_FLAGS ?= "-g -feliminate-used-debug-types ${DEBUG_PREFIX_MAP} "
-#
-# FULL_OPTIMIZATION = "-Os -pipe ${DEBUG_FLAGS}"
-# DEBUG_OPTIMIZATION = "-Og ${DEBUG_FLAGS -pipe}"
-# SELECTED_OPTIMIZATION = "${@d.getVar(oe.utils.vartrue('DEBUG_BUILD', 'DEBUG_OPTIMIZATION', 'FULL_OPTIMIZATION', d))}"
+
+#TARGET_CFLAGS = "${TARGET_CPPFLAGS} ${SELECTED_OPTIMIZATION}"
+# 
+#DEBUG_FLAGS ?= "-g -feliminate-used-debug-types ${DEBUG_PREFIX_MAP} "
+# 
+#DEBUG_OPTIMIZATION = "-Og ${DEBUG_FLAGS -pipe}"
+#SELECTED_OPTIMIZATION = "${@d.getVar(oe.utils.vartrue('DEBUG_BUILD', 'DEBUG_OPTIMIZATION', 'FULL_OPTIMIZATION', d))}"
+
+# OE optimization defaults to -O2 which makes for much larger binaries.
+# Override here to use -Os instead, resulting in smaller images.
+FULL_OPTIMIZATION = "-Os -pipe ${DEBUG_FLAGS}"
+
+# Some targets need O2, avoids build errors
+O2_OPT = "-O2 -pipe ${DEBUG_FLAGS}"
+FULL_OPTIMIZATION_pn-gd = "${O2_OPT}"
+
+# build some core libs with better compiler optimization for better performance
+O3_OPT = "-O3 -pipe ${DEBUG_FLAGS}"
+FULL_OPTIMIZATION_pn-flac = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-jpeg = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-lame = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-liba52 = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libdca = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libgcrypt = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libmad = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libogg = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libpng = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libsamplerate = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-libvorbis = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-tremor = "${O3_OPT}"
+FULL_OPTIMIZATION_pn-zlib = "${O3_OPT}"
+
+
 
