djmount: try to fix build of djmount with libupnp
Note: not aligned for systemctl yet

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -97,6 +97,7 @@ PREFERRED_PROVIDER_virtual/lua = "luajit"
 
 PREFERRED_VERSION_ffmpeg = "4.3.2"
 PREFERRED_VERSION_virtual/lua = "2.1"
+PREFERRED_VERSION_libupnp = "1.6.25"
 
 SANITY_TESTED_DISTROS ?= " \
 	poky-2.3-snapshot-20170912 \n \
