tuxbox.conf: use MACHINE_BRAND as default within image name

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -16,7 +16,7 @@ SDK_VERSION = "${DISTRO_VERSION}"
 
 
 IMAGE_BASENAME ?= "${DISTRO_NAME}"
-IMAGE_NAME ?= "${IMAGE_BASENAME}-${MACHINEBUILD}-${DISTRO_VERSION}${IMAGE_VERSION_SUFFIX}"
+IMAGE_NAME ?= "${IMAGE_BASENAME}-${MACHINE_BRAND}-${DISTRO_VERSION}${IMAGE_VERSION_SUFFIX}"
 
 CREATOR ?= "${USER}"
 KBUILD_BUILD_USER ?= "${CREATOR}"
