files: try to fix mess of license paths

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -91,7 +91,7 @@ COMMERCIAL_AUDIO_PLUGINS ?= ""
 COMMERCIAL_VIDEO_PLUGINS ?= ""
 # COMMERCIAL_VIDEO_PLUGINS ?= "gst-plugins-ugly-mpeg2dec gst-plugins-ugly-mpegstream gst-plugins-bad-mpegvideoparse"
 # Set of common licenses used for license.bbclass
-COMMON_LICENSE_DIR ??= "${COREBASE}/meta/files/common-licenses"
+#COMMON_LICENSE_DIR ??= "${COREBASE}/meta/files/common-licenses"
 
 # Allow java, svn and unzip executed on host
 HOSTTOOLS += "svn unzip xmlcatalog doxygen"
