--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,5 +15,7 @@ BBFILE_PATTERN_neutrino-mp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_neutrino-mp = "10"
 
 # Additional license directories.
-LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
+LICENSE_PATH += " \
+	${LAYERDIR}/files/custom-licenses \
+"
 
