--- a/recipes-neutrino/neutrino-plugins/files/configure.ac.template
+++ b/recipes-neutrino/neutrino-plugins/files/configure.ac.template
@@ -1,4 +1,4 @@
-AC_INIT([@PN@],[0.0.0],[@HP@])
+AC_INIT([@PN@],[@PV@],[@HP@])
 AM_INIT_AUTOMAKE([foreign])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 AC_GNU_SOURCE
