neutrino-plugins: rework plugin recipes
This one of more steps to sync with git repos

--- a/recipes-neutrino/neutrino-plugins/asc2uni/configure.ac
+++ b/recipes-neutrino/neutrino-plugins/asc2uni/configure.ac
@@ -1,4 +1,5 @@
 AC_INIT([@PN@],[@PV@],[@HP@])
+AC_CONFIG_SRCDIR([asc2uni])
 AM_INIT_AUTOMAKE([foreign])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 AC_GNU_SOURCE
@@ -37,7 +38,7 @@ AC_SUBST(NEUTRINO_BUILD)
 
 AC_CONFIG_FILES([
 Makefile
-@P@/Makefile
+asc2uni/Makefile
 ])
 
 AC_OUTPUT
