--- a/recipes-neutrino/neutrino-plugins/getrc/configure.ac
+++ b/recipes-neutrino/neutrino-plugins/getrc/configure.ac
@@ -1,4 +1,5 @@
 AC_INIT([@PN@],[@PV@],[@HP@])
+AC_CONFIG_SRCDIR([getrc])
 AM_INIT_AUTOMAKE([foreign])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 AC_GNU_SOURCE
@@ -37,8 +38,7 @@ AC_SUBST(NEUTRINO_BUILD)
 
 AC_CONFIG_FILES([
 Makefile
-@P@/Makefile
-tuxcal/daemon/Makefile
+getrc/Makefile
 ])
 
 AC_OUTPUT
