--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -1,12 +1,11 @@
 # This is the tuxbox-neutrino build based on yocto poky
 
 DISTRO_NAME ?= "${DISTRO}"
-DISTRO_VERSION_NUMBER_MAJOR = "3"
-DISTRO_VERSION_NUMBER_MINOR = "2"
-DISTRO_VERSION_NUMBER_MICRO = "4"
-DISTRO_VERSION_NUMBER_CYCLE = "${DISTRO_VERSION_NUMBER_MAJOR}${DISTRO_VERSION_NUMBER_MINOR}0"
-DISTRO_BUILD_VERSION = "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
-DISTRO_VERSION ?= "${DISTRO_BUILD_VERSION}"
+DISTRO_VERSION_NUMBER_MAJOR ?= "3"
+DISTRO_VERSION_NUMBER_MINOR ?= "2"
+DISTRO_VERSION_NUMBER_MICRO ?= "4"
+DISTRO_VERSION_NUMBER_CYCLE ?= "${DISTRO_VERSION_NUMBER_MAJOR}${DISTRO_VERSION_NUMBER_MINOR}${DISTRO_VERSION_NUMBER_MICRO}"
+DISTRO_VERSION ?= "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_TYPE ?= "beta"
 
 BUILD_VERSION = "${@time.strftime('%Y%m%d%H%M%S',time.localtime())}"
@@ -21,14 +20,19 @@ IMAGE_NAME ?= "${IMAGE_BASENAME}-${MACHINE_BRAND}-${MACHINE_NAME}-${DISTRO_VERSI
 CREATOR ?= "${USER}"
 KBUILD_BUILD_USER ?= "${CREATOR}"
 
+PACKAGE_EXTRA_ARCHS += "allarch"
+
 GIT_USER ?= "root"
 MAIL ?= "root@${MACHINE}"
 
-PACKAGE_CLASSES ?= "package_ipk"
-
 IMAGESIZE ?= "normal"
 
-RM_WORK_EXCLUDE += "neutrino-image base-files"
+RM_WORK_EXCLUDE += "neutrino-mp neutrino-image base-files neutrino-feed-config"
+
+#  Which neutrino source will be used:
+#  Choose neutrino source. Possible values are "tuxbox", "tango" or "ni"
+#  Note: Successful build of foreign neutrino source is not guaranteed.
+FLAVOUR ?= "tuxbox"
 
 DEFAULT_TIMEZONE ?= "Europe/Berlin"
 
@@ -45,10 +49,29 @@ OEINCLUDELOGS ?= "yes"
 PATCHRESOLVE = "noop"
 
 PRSERV_HOST = "localhost:0"
-RELEASE_STATE ?= "0"
-UPDATE_SERVER_URL ?= ""
-IMAGE_LOCATION ?= "file:////media/sda1/service/images"
 
+# release state: default beta
+RELEASE_STATE = "0"
+
+
+### Update server configuration
+#   where do find the buildsystem the distro type file (beta.txt, release.txt ...), this file contains list of image urls for download
+RELEASE_TEXT_LOCATION_FILE = "${DEPLOY_DIR_IMAGE}/${DISTRO_TYPE}.txt"
+
+## Server URL which contains update and packages.
+#  Web server must be running and html content must point to the toplevel directory which contains the deployed images
+#  NOTE: @hostname@ is only a placeholder and will be replaced with current hostname of your build host automatically. @hostname@ could be the current host IP too. 
+#  or any other domain.tld. If required, replace @hostname@ with the host IP or Domain.
+UPDATE_SERVER_URL ?= "http://@hostname@"
+
+## URL to the dist directory, must contain the content of the deployed images and packages
+DIST_URL ?= "${UPDATE_SERVER_URL}/dist"
+
+## URL to the images, must contain the content of the image dir and its a sub dir to specific machine build and image dir which contains machine images
+IMAGE_LOCATION_URL ?= "${DIST_URL}/${DISTRO_VERSION}/@build-dirname@/images/${MACHINE}"
+
+## URL to package feed
+IPK_FEED_SERVER ?= "${DIST_URL}/${DISTRO_VERSION}/@build-dirname@/ipk"
 
 KERNEL_CONSOLE ?= "ttyS0"
 KEEPUIMAGE ??= "yes"
