--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -8,6 +8,8 @@ DISTRO_VERSION_NUMBER_CYCLE ?= "${DISTRO_VERSION_NUMBER_MAJOR}${DISTRO_VERSION_N
 DISTRO_VERSION ?= "${DISTRO_VERSION_NUMBER_MAJOR}.${DISTRO_VERSION_NUMBER_MINOR}.${DISTRO_VERSION_NUMBER_MICRO}"
 DISTRO_TYPE ?= "beta"
 
+META_NAME ?= "meta-neutrino"
+
 BUILD_VERSION = "${@time.strftime('%Y%m%d%H%M%S',time.localtime())}"
 
 SDK_NAME ?= "neutrino-image"
