tvheadend: rework recipe for tvheadend

--- a/recipes-multimedia/tvheadend/tvheadend/tvheadend.service
+++ b/recipes-multimedia/tvheadend/tvheadend/tvheadend.service
@@ -6,7 +6,7 @@ After=syslog.target network.target auditd.service
 [Service]
 Type=forking
 PIDFile=/run/tvheadend.pid
-ExecStart=/usr/bin/tvheadend -f -p /var/run/tvheadend.pid -C -u root -g root
+ExecStart=/usr/bin/tvheadend -p /var/run/tvheadend.pid -C -u root -g root
 Restart=on-failure
 
 [Install]
