neutrino_git.bb: Rename recipe from neutrino-mp to neutrino
Renamed the recipe to simplify package naming conventions,
enhancing consistency across our layers. This change aligns the
recipe name with our current branding strategy and reduces complexity
in handling related metadata.

NOTE: This change requires renaming corresponding bbappend files in
machine-specific meta-layers to reflect the new recipe name.
Please update your layers accordingly.

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -134,6 +134,7 @@ ASSUME_PROVIDED += "libsdl2-native nativesdk-libsdl2"
 LICENSE_FLAGS_WHITELIST="commercial"
 
 PREFERRED_PROVIDER_virtual/lua = "luajit"
+PREFERRED_PROVIDER_virtual/neutrino = "neutrino"
 
 PREFERRED_VERSION_ffmpeg = "4.3.2"
 PREFERRED_VERSION_virtual/lua = "2.1"
