tuxbox.conf: remove DIST_URL
Resolve ambiguity of DIST_URL with explicit assignment to UPDATE_SERVER_URL

--- a/conf/distro/tuxbox.conf
+++ b/conf/distro/tuxbox.conf
@@ -66,14 +66,11 @@ RELEASE_TEXT_LOCATION_FILE = "${DEPLOY_DIR_IMAGE}/${DISTRO_TYPE}.txt"
 #  or any other domain.tld. If required, replace @hostname@ with the host IP or Domain.
 UPDATE_SERVER_URL ?= "http://@hostname@"
 
-## URL to the dist directory, must contain the content of the deployed images and packages
-DIST_URL ?= "${UPDATE_SERVER_URL}/dist"
-
 ## URL to the images, must contain the content of the image dir and its a sub dir to specific machine build and image dir which contains machine images
-IMAGE_LOCATION_URL ?= "${DIST_URL}/${DISTRO_VERSION}/@build-dirname@/images/${MACHINE}"
+IMAGE_LOCATION_URL ?= "${UPDATE_SERVER_URL}/${DISTRO_VERSION}/@build-dirname@/images/${MACHINE}"
 
 ## URL to package feed
-IPK_FEED_SERVER ?= "${DIST_URL}/${DISTRO_VERSION}/@build-dirname@/ipk"
+IPK_FEED_SERVER ?= "${UPDATE_SERVER_URL}/${DISTRO_VERSION}/@build-dirname@/ipk"
 
 KERNEL_CONSOLE ?= "ttyS0"
 KEEPUIMAGE ??= "yes"
