layer.conf: alligned for new target name neutrino-mp -> neutrino

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_neutrino-mp = "gatesgarth"
+LAYERSERIES_COMPAT_neutrino = "gatesgarth"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
@@ -10,9 +10,9 @@ BBFILES := "${BBFILES} ${LAYERDIR}/recipes*/*/*.bb \
             ${LAYERDIR}/recipes*/*/*/*.bbappend \
 "
 
-BBFILE_COLLECTIONS += "neutrino-mp"
-BBFILE_PATTERN_neutrino-mp := "^${LAYERDIR}/"
-BBFILE_PRIORITY_neutrino-mp = "10"
+BBFILE_COLLECTIONS += "neutrino"
+BBFILE_PATTERN_neutrino := "^${LAYERDIR}/"
+BBFILE_PRIORITY_neutrino = "10"
 
 # Additional license directories.
 LICENSE_PATH += " \
